# possum_parser_language

./: .gitignore  ERROR_REPORTING_PLAN.md  LICENSE.md  README.md  build.zig  build.zig.zon  flake.nix
docs/: cli.md  (+6 more)
opossum/: .ocamlformat  dune-project  opossum.opam  shell.nix
opossum/lib/: Ast.ml  AstTransformer.ml  Cli.ml  Env.ml  Errors.ml  Evaluator.ml  Executor.ml  Json.ml  JsonParser.ml  Main.ml  Parser.ml  ParserFn.ml  PossumCore.ml  PossumStdlib.ml  PossumStdlibSource.ml  Program.ml  ProgramParser.ml  ProgramStdlib.ml  Value.ml  dune  possum_stdlib.possum
opossum/test/: AstTransformerTest.ml  ExecutorTest.ml  ParserTest.ml  dune
opossum/test/expect/: docs.overview.t  dune  error_env_find_json.t  error_env_find_parser.t  error_object_member_name.t  error_parse_input.t  error_parse_program.t  pattern_matching.t  stdlib.t
opossum/test/expect/advent_2020_day_04.t/: input.parser  run.t
opossum/test/expect/advent_2021_day_01.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_02.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_03.t/: input.txt  run.t
opossum/test/expect/advent_2021_day_04.t/: input.parser  run.t
opossum/test/expect/advent_2021_day_05.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_06.t/: run.t
opossum/test/expect/advent_2021_day_07.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_08.t/: input.parser  run.t
opossum/test/expect/advent_2021_day_09.t/: input.txt  run.t
opossum/test/expect/advent_2021_day_10.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_11.t/: run.t
opossum/test/expect/advent_2021_day_12.t/: input.parser  run.t
opossum/test/expect/advent_2021_day_13.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_14.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_15.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_16.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_17.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_18.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_19.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_20.t/: input.parser  run.t
opossum/test/expect/advent_2021_day_21.t/: input.parser  input.txt  run.t
opossum/test/expect/advent_2021_day_22.t/: input.parser  input.txt  run.t
(+481 files in other folders)
