(lang dune 3.6)

(name opossum)

(generate_opam_files true)

(source
 (github mulias/possum_parser_language))

(authors "Elias Mulhall")

(maintainers "Elias Mulhall")

(license ISC)

(documentation https://github.com/mulias/possum_parser_language/tree/main/docs)

(package
 (name opossum)
 (synopsis "A tiny text parsing language")
 (description "Possum is a domain specific language for parsing arbitrary text into JSON")
 (depends
   (alcotest (and (= 1.6.0) :with-test))
   (angstrom (= 0.15.0))
   (core (= v0.15.1))
   (core_unix (= v0.15.2))
   (dune (= 3.6.1))
   (ocaml (= 4.14.0))
   (ocamlformat (= 0.24.1))
   (ppx_deriving (= 5.2.1))
   (ppx_let (= v0.15.0))
   (ppx_string (= v0.15.0))
   (re (= 1.10.4))
   (yojson (= 2.0.2))
   ))
