(lang dune 3.6)
(using dune_site 0.1)

(name opossum)

(version v0.2.0)

(generate_opam_files true)

(source
 (github mulias/possum_parser_language))

(authors "Elias Mulhall")

(maintainers "Elias Mulhall")

(license ISC)

(documentation https://github.com/mulias/possum_parser_language/tree/main/docs)

(package
 (name opossum)
 (synopsis "A tiny text parsing language")
 (description "Possum is a domain specific language for parsing arbitrary text into JSON")
 (depends
   (alcotest (and (= 1.6.0) :with-test))
   (angstrom (= 0.15.0))
   (cmdliner (= 1.1.1))
   (core (= v0.15.1))
   (dune (= 3.6.1))
   (ocaml (= 4.14.0))
   (ocamlformat (= 0.24.1))
   (ppx_blob (= 0.7.2))
   (ppx_deriving (= 5.2.1))
   (ppx_let (= v0.15.0))
   (ppx_string (= v0.15.0))
   (re (= 1.10.4))
   (yojson (= 2.0.2))
   ))
