(library
 (name opossum)
 (modules
  Ast
  AstTransformer
  Cli
  Env
  Errors
  Evaluator
  Executor
  Main
  Parser
  ParserFn
  PossumCore
  PossumStdlib
  PossumStdlibSource
  Program
  ProgramParser
  Value)
 (libraries base cmdliner core stdio angstrom yojson re)
 (preprocess
  (pps ppx_blob ppx_deriving.show ppx_let ppx_string))
 (preprocessor_deps
  (file possum_stdlib.possum)))
